@@ -1,3 +1,4 @@
+* #7717: Log incoming messages (morgs)
 * #7692: Don't show pending messages when joining a chat (morgs)
 * Updated translations: nl, te, es
 
